Feat-Cambios del archivo index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <p>Hola Munto</p>
+
+    <ul>
+        <li>Jose</li>
+        <li>Esteban</li>
+        
+    </ul>
+
+    <form action="get">
+        <input type="button" value="click">
+    </form>
+
 </body>
 </html>
