Feat-Modelo de Caja1

--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DInicio</title>
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
+
 <body>
-    <p>Hola Munto</p>
 
-    <ul>
-        <li>Jose</li>
-        <li>Esteban</li>
-        
-    </ul>
+    <h1>Hola Mundo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis placeat iure beatae perspiciatis pariatur eligendi
+        voluptatem, vitae odit laudantium commodi! Eos eius fugiat ipsa deleniti corporis reiciendis repudiandae officia
+        dolorem.</p>
 
-    <form action="get">
-        <input type="button" value="click">
-    </form>
+    <!-- Este esta al ancho de la pagina, La etiqueta es en Bloque -->
+    <div>
+        Caja 1
+
+    </div>
+
+    <!-- Este esta al ancho del texto ,La etiqueta es en linea -->
+    <a href="">Ir a Google</a>
+
 
 </body>
+
 </html>
