Feat-Transicion hover

--- a/index.html
+++ b/index.html
@@ -10,20 +10,9 @@
 
 <body>
 
-    <h1>Hola Mundo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis placeat iure beatae perspiciatis pariatur eligendi
-        voluptatem, vitae odit laudantium commodi! Eos eius fugiat ipsa deleniti corporis reiciendis repudiandae officia
-        dolorem.</p>
-
-    <!--Este esta al ancho de la pagina, La etiqueta es en Bloque -->
-    <div>
-        Caja 1
-
+    <div class="micuadro">
+        Cuadro
     </div>
-
-    <!-- Este esta al ancho del texto ,La etiqueta es en linea -->
-    <a href="">Ir a Google</a>
-
 
 </body>
 
