Feat-Introduccion a Float

--- a/inicio.html
+++ b/inicio.html
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        <a href="">inicio</a> <a href="">contactos</a>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda amet a rerum animi dolorum ut quam
             voluptatem, voluptas debitis nisi officiis accusantium totam molestias at? Corporis ab non provident nisi?
         </p>
@@ -19,7 +20,18 @@
     </nav>
 
     <main>
-        Main
+        <article class="uno">
+            <img src="https://image.api.playstation.com/vulcan/img/rnd/202011/0714/vuF88yWPSnDfmFJVTyNJpVwW.png" alt="">
+            <h2>Spiderman</h2>
+        </article>
+        <article class="dos">
+            <img src="https://image.api.playstation.com/vulcan/img/rnd/202011/0714/vuF88yWPSnDfmFJVTyNJpVwW.png" alt="">
+            <h2>Spiderman</h2>
+        </article>
+       
+
+
+
     </main>
 
     <footer>
