feat-Float left

--- a/index.html
+++ b/index.html
@@ -4,16 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DInicio</title>
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <title>Inicio</title>
+    <link rel="stylesheet" href="./CSS/Estilos2/styles.css">
 </head>
 
 <body>
+    <div class="main">
+        <h1> Documentación CSS </h1>
+        <br>
+        <h3>Ejemplos</h3>
 
-    <div class="micuadro">
-        Cuadro
+        <h3>Float and Clear</h3>
+        <p>Ejercicios</p>
+        <ul>
+            <li><a href="/pages/Page2/floatleft.html">Ejemplo 1: float left</a></li>
+            <li><a href="/pages/Page2/FloatRight.html">Ejemplo 1: float right</a></li>
+            <li><a href="/pages/Page2/FloatNone.html">Ejemplo 1: float none</a></li>
+            <li><a href="/pages/Page2/FloatCombinado.html">Ejemplo 1: float Combinado</a></li>
+        </ul>
+        <br>
+
+        <h3>La propiedad Position</h3>
+        <p>Ejercicios</p>
+        <ul>
+            <li><a href="/pages/page3/PositionRelative.html">Ejemplo 1: Position Relative</a></li>
+            <li><a href="/pages/page3/PositionAbsolute.html">Ejemplo 1: Position Absolute</a></li>
+        </ul>
+        <br>
+
+        <h3>Posición Display </h3>
+        <p>Ejercicios</p>
+        <ul>
+            <li><a href="">Ejemplo 1</a></li>
+        </ul>
+        <br>
+
+        <h3>Posición Display Flex</h3>
+        <p>Ejercicios</p>
+        <ul>
+            <li><a href="">Ejemplo 1</a></li>
+        </ul>
+        <br>
+
+        <h3>Posición Display Grid</h3>
+        <p>Ejercicios</p>
+        <ul>
+            <li><a href="">Ejemplo 1</a></li>
+        </ul>
+        <br>
     </div>
 
 </body>
 
 </html>
+
