--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
         <br>
     </div>
 
+
+    <div>
+        <a href="">clic me</a>
+        <a href="">Go google</a>
+       
+    </div>
+    <div>
+        <label for="">Pagina</label>
+        <input type="text">
+        
+    </div>
 </body>
 
 </html>
